source/formulaforce/main/objects/Qualifying__c/fields/Driver__c.field-meta.xml
<CustomField>
    <fullName>Driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Driver</label>
    <referenceTo>Driver__c</referenceTo>
    <relationshipLabel>Qualifying</relationshipLabel>
    <relationshipName>Qualifying</relationshipName>
    <type>Lookup</type>
</CustomField>