source/formulaforce/main/objects/Qualifying__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>