source/formulaforce/main/objects/Qualifying__c/fields/Qualifying_1_Time__c.field-meta.xml
<CustomField>
    <fullName>Qualifying_1_Time__c</fullName>
    <label>Qualifying 1 Time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>