source/formulaforce/main/objects/Qualifying__c/fields/Qualifying_3_Time__c.field-meta.xml
<CustomField>
    <fullName>Qualifying_3_Time__c</fullName>
    <label>Qualifying 3 Time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>