source/formulaforce/main/objects/Qualifying__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Qualifying</relationshipLabel>
    <relationshipName>Qualifying</relationshipName>
    <type>Lookup</type>
</CustomField>